--- a/src/features/Section/Section.module.scss
+++ b/src/features/Section/Section.module.scss
@@ -4,15 +4,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 100px 0;
   width: 100%;
   position: relative;
-  @include tablet {
-    margin: 50px 0;
-  }
-  @include mobile {
-    margin: 50px 0;
-  }
   &Container {
     display: flex;
     flex-direction: column;
