--- a/src/pages/Estates/Estates.module.scss
+++ b/src/pages/Estates/Estates.module.scss
@@ -1,4 +1,5 @@
 .estates {
+  border: 1px solid red;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
